--- a/node-server/package.json
+++ b/node-server/package.json
@@ -1,19 +1,12 @@
 {
-  "name": "server",
+  "name": "voice-agent-server",
   "version": "1.0.0",
-  "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx nodemon index.js"
+    "start": "node index.js"
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "@openai/realtime-api-beta": "github:openai/openai-realtime-api-beta",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "ws": "^8.18.0"
+    "ws": "^8.16.0",
+    "dotenv": "^16.3.1"
   }
 }
